# Matura-AlphaZero-demos

./: .gitignore  CMakeLists.txt  README.md  main.cpp  supervised.cpp  test.cpp  test.sh
include/: point.hpp  utils.hpp
neuralNetworkDemo/: main.py
scr/: point.cpp
supervised/include/: config.hpp  model.hpp
supervised/src/: model.cpp
unsupervised/include/: cluster.hpp  config.hpp  group.hpp
unsupervised/src/: cluster.cpp  group.cpp
